Added faction and some images

--- a/campaign/characters/non-player/img/index.html
+++ b/campaign/characters/non-player/img/index.html
@@ -106,6 +106,16 @@
      </a>
     </li>
     <li>
+     <a href="genji_tink (1).jpg">
+      genji tink (1).jpg
+     </a>
+    </li>
+    <li>
+     <a href="genji_tink (2).jpg">
+      genji tink (2).jpg
+     </a>
+    </li>
+    <li>
      <a href="isabella_shadowbrook.jpg">
       isabella shadowbrook.jpg
      </a>
