--- a/campaign/lore/guilds/Tinkers Guild.html
+++ b/campaign/lore/guilds/Tinkers Guild.html
@@ -80,7 +80,9 @@
    <p class="first-paragraph">
     In the province of
     <a href="../../locations/regions/Matella/The_Ashenlands/The_Ashenlands.html">
-     The Ashenlands</a>, a remarkable guild known as the Tinkers Guild has taken root, attracting primarily goblin inventors and engineers seeking to push the boundaries of technological innovation. Founded by the brilliant and visionary Genji Tink, this guild has become synonymous with creativity, ingenuity, and a lifestyle centered around invention.
+     The Ashenlands</a>, a remarkable guild known as the Tinkers Guild has taken root, attracting primarily goblin inventors and engineers seeking to push the boundaries of technological innovation. Founded by the brilliant and visionary
+    <a href="../../characters/non-player/genji_tink.html">
+     genji tink</a>, this guild has become synonymous with creativity, ingenuity, and a lifestyle centered around invention.
    </p>
    <p>
     The Tinkers Guild's influence, however, extends far beyond the borders of
