--- a/campaign/quests/manastorm_legal_advisors/Manastorm_Legal_Advisors.html
+++ b/campaign/quests/manastorm_legal_advisors/Manastorm_Legal_Advisors.html
@@ -74,7 +74,11 @@
     <a href="../../items/devices/ChronoLink_Nexus_Ethereal_Pocket_Portal.html">
      ChronoLink Nexus Ethereal Pocket Portal
     </a>
-    —an incredible invention attributed to the brilliant mind of Genji Tink.
+    —an incredible invention attributed to the brilliant mind of
+    <a href="../../characters/non-player/genji_tink.html">
+     genji tink
+    </a>
+    .
    </p>
    <p>
     Guided by his instincts, Milton believed he was transporting the transformed ambassador to safety, intending to reassemble the pieces of the puzzle and ensure their ultimate deliverance. Yet, unbeknownst to him, the ChronoLink Nexus had been tampered with. It was not a mere malfunction, but a deliberate act of sabotage, orchestrated with Milton as the primary target. The saboteur, however, had not anticipated the Nexus being employed in such a unique manner.
@@ -180,6 +184,19 @@
    </h4>
    <p class="subsection">
     Should thou, in possession of the requisite valor and skill necessary to undertake this unparalleled mission, wish to partake in this extraordinary undertaking, seek out the offices of the Wandering Wanderer, ensconced within the bustling confines of Eldoria's hallowed precincts. Therein, all manner of inquiries shall be entertained, and further illumination concerning this audacious endeavor shall be disseminated. Remember, the divine call to destiny is extended solely to those whose mettle is forged in the crucible of courage. Shall you stand among the pantheon of legends, whose names shall forever be etched upon the tablets of immortality? Delay not, for time, that most capricious of arbiters, wanes with inexorable haste, and the cosmos yearns for heroes who shall reshape the tapestry of existence!
+   </p>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    The Offices of the Wandering Wanderer
+   </h3>
+   <p class="first-paragraph">
+    When accepting this quest, the players must sign the contract and seak out 'the offices of the wandering wanderer.' This changes depending on which city or town is nearby but there is typically a cadence of 'Wanderers' coming into the area. The Wanderer, whether already in town or on the way, will be
+    <a href="../../characters/non-player/silas_shadowvale.html">
+     silas shadowvale
+    </a>
+    . This Wanderer can offer the players much more information about the situation and contract in exchange for a price. His price is all the knowledge they gain related to and while on the legal adventures of this quest. Otherwise, he will only direct them to where they need to proceed to.
    </p>
   </div>
   <hr/>
