--- a/campaign/characters/non-player/index.html
+++ b/campaign/characters/non-player/index.html
@@ -106,6 +106,11 @@
      </a>
     </li>
     <li>
+     <a href="genji_tink.html">
+      genji tink
+     </a>
+    </li>
+    <li>
      <a href="isabella_shadowbrook.html">
       isabella shadowbrook
      </a>
@@ -250,6 +255,20 @@
       <i class="fas fa-camera">
       </i>
       img/elysia_moonwhisper.jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/genji_tink (1).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/genji_tink (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/genji_tink (2).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/genji_tink (2).jpg
      </a>
     </li>
     <li>
