--- a/campaign/lore/factions/img/index.html
+++ b/campaign/lore/factions/img/index.html
@@ -4,7 +4,7 @@
   <title>
    index
   </title>
-  <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <link href="../../../../css/mmorpdnd.css" rel="stylesheet"/>
   <!-- JavaScript to handle navigation buttons -->
   <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
   </script>
@@ -46,20 +46,13 @@
    </a>
   </div>
   <h1>
-   Index of /home/awtorode/git/DnD/campaign/lore/factions
+   Index of /home/awtorode/git/DnD/campaign/lore/factions/img
   </h1>
   <div class="indexLinks">
    <ul>
     <li>
-     <a href="Ironblood_Vanguard.html">
-      Ironblood Vanguard
-     </a>
-    </li>
-    <li>
-     <a class="image-index-link" href="img/ironblood_vanguard_crest.jpg">
-      <i class="fas fa-camera">
-      </i>
-      img/ironblood_vanguard_crest.jpg
+     <a href="ironblood_vanguard_crest.jpg">
+      ironblood vanguard crest.jpg
      </a>
     </li>
    </ul>
