--- a/index.html
+++ b/index.html
@@ -84,6 +84,13 @@
      </a>
     </li>
     <li>
+     <a class="dir-index-link" href="music/index.html">
+      <i class="fas fa-folder">
+      </i>
+      music
+     </a>
+    </li>
+    <li>
      <a class="dir-index-link" href="templates/index.html">
       <i class="fas fa-folder">
       </i>
