--- a/campaign/characters/non-player/index.html
+++ b/campaign/characters/non-player/index.html
@@ -131,6 +131,11 @@
      </a>
     </li>
     <li>
+     <a href="marla_hindesah.html">
+      marla hindesah
+     </a>
+    </li>
+    <li>
      <a href="maximus_stormweaver.html">
       maximus stormweaver
      </a>
@@ -297,6 +302,13 @@
       <i class="fas fa-camera">
       </i>
       img/lyra_silverwind.jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/marla_hindesah.jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/marla_hindesah.jpg
      </a>
     </li>
     <li>
