--- a/campaign/items/magic/index.html
+++ b/campaign/items/magic/index.html
@@ -56,6 +56,32 @@
      </a>
     </li>
     <li>
+     <a href="The_Puzzle_Box_of_Zytharoth.html">
+      The Puzzle Box of Zytharoth
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/The_Puzzle_Box_of_Zytharoth (1).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/The_Puzzle_Box_of_Zytharoth (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/The_Puzzle_Box_of_Zytharoth (2).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/The_Puzzle_Box_of_Zytharoth (2).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/The_Puzzle_Box_of_Zytharoth (3).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/The_Puzzle_Box_of_Zytharoth (3).jpg
+     </a>
+    </li>
+    <li>
      <a class="image-index-link" href="img/temporal_cyrex_crystals (1).jpg">
       <i class="fas fa-camera">
       </i>
