--- a/campaign/lore/deities/img/index.html
+++ b/campaign/lore/deities/img/index.html
@@ -46,43 +46,38 @@
    </a>
   </div>
   <h1>
-   Index of /home/awtorode/git/DnD/campaign/items/magic/img
+   Index of /home/awtorode/git/DnD/campaign/lore/deities/img
   </h1>
   <div class="indexLinks">
    <ul>
     <li>
-     <a href="The_Puzzle_Box_of_Zytharoth (1).jpg">
-      The Puzzle Box of Zytharoth (1).jpg
+     <a href="Yltharis (1).jpg">
+      Yltharis (1).jpg
      </a>
     </li>
     <li>
-     <a href="The_Puzzle_Box_of_Zytharoth (2).jpg">
-      The Puzzle Box of Zytharoth (2).jpg
+     <a href="Yltharis (2).jpg">
+      Yltharis (2).jpg
      </a>
     </li>
     <li>
-     <a href="The_Puzzle_Box_of_Zytharoth (3).jpg">
-      The Puzzle Box of Zytharoth (3).jpg
+     <a href="Zytharoth (1).jpg">
+      Zytharoth (1).jpg
      </a>
     </li>
     <li>
-     <a href="temporal_cyrex_crystals (1).jpg">
-      temporal cyrex crystals (1).jpg
+     <a href="Zytharoth (2).jpg">
+      Zytharoth (2).jpg
      </a>
     </li>
     <li>
-     <a href="temporal_cyrex_crystals (2).jpg">
-      temporal cyrex crystals (2).jpg
+     <a href="Zytharoth (3).jpg">
+      Zytharoth (3).jpg
      </a>
     </li>
     <li>
-     <a href="temporal_cyrex_crystals (3).jpg">
-      temporal cyrex crystals (3).jpg
-     </a>
-    </li>
-    <li>
-     <a href="temporal_cyrex_crystals (4).jpg">
-      temporal cyrex crystals (4).jpg
+     <a href="Zytharoth (4).jpg">
+      Zytharoth (4).jpg
      </a>
     </li>
    </ul>
