--- a/campaign/lore/deities/index.html
+++ b/campaign/lore/deities/index.html
@@ -50,6 +50,63 @@
   </h1>
   <div class="indexLinks">
    <ul>
+    <li>
+     <a href="Dreamspawn.html">
+      Dreamspawn
+     </a>
+    </li>
+    <li>
+     <a href="Yltharis.html">
+      Yltharis
+     </a>
+    </li>
+    <li>
+     <a href="Zytharoth.html">
+      Zytharoth
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/Yltharis (1).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/Yltharis (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/Yltharis (2).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/Yltharis (2).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/Zytharoth (1).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/Zytharoth (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/Zytharoth (2).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/Zytharoth (2).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/Zytharoth (3).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/Zytharoth (3).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/Zytharoth (4).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/Zytharoth (4).jpg
+     </a>
+    </li>
    </ul>
   </div>
  </body>
