Added some html files and images

--- a/campaign/characters/non-player/genji_tink.html
+++ b/campaign/characters/non-player/genji_tink.html
@@ -532,7 +532,11 @@
     Notes
    </h3>
    <p class="first-paragraph">
-    No notes needed for Genji Tink.
+    For a list of various inventions of Genji Tink, see
+    <a href="../../notes/Genji_Tinks_Inventions.html">
+     Genji Tinks Inventions
+    </a>
+    .
    </p>
   </div>
  </body>
