--- a/campaign/creatures/animals/img/index.html
+++ b/campaign/creatures/animals/img/index.html
@@ -51,6 +51,36 @@
   <div class="indexLinks">
    <ul>
     <li>
+     <a href="Baby_Lakurian (1).jpg">
+      Baby Lakurian (1).jpg
+     </a>
+    </li>
+    <li>
+     <a href="Baby_Lakurian (2).jpg">
+      Baby Lakurian (2).jpg
+     </a>
+    </li>
+    <li>
+     <a href="Baby_Lakurian (3).jpg">
+      Baby Lakurian (3).jpg
+     </a>
+    </li>
+    <li>
+     <a href="Lakurian (1).jpg">
+      Lakurian (1).jpg
+     </a>
+    </li>
+    <li>
+     <a href="Lakurian (2).jpg">
+      Lakurian (2).jpg
+     </a>
+    </li>
+    <li>
+     <a href="Lakurian (3).jpg">
+      Lakurian (3).jpg
+     </a>
+    </li>
+    <li>
      <a href="mossback_treant (1).jpg">
       mossback treant (1).jpg
      </a>
