--- a/campaign/creatures/animals/index.html
+++ b/campaign/creatures/animals/index.html
@@ -51,6 +51,11 @@
   <div class="indexLinks">
    <ul>
     <li>
+     <a href="Lakurian.html">
+      Lakurian
+     </a>
+    </li>
+    <li>
      <a href="Mossback_Treant.html">
       Mossback Treant
      </a>
@@ -83,6 +88,48 @@
     <li>
      <a href="Whisperwing_Owl.html">
       Whisperwing Owl
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/Baby_Lakurian (1).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/Baby_Lakurian (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/Baby_Lakurian (2).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/Baby_Lakurian (2).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/Baby_Lakurian (3).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/Baby_Lakurian (3).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/Lakurian (1).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/Lakurian (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/Lakurian (2).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/Lakurian (2).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/Lakurian (3).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/Lakurian (3).jpg
      </a>
     </li>
     <li>
