--- a/campaign/items/consumables/food/index.html
+++ b/campaign/items/consumables/food/index.html
@@ -50,6 +50,72 @@
   </h1>
   <div class="indexLinks">
    <ul>
+    <li>
+     <a href="Maeza_Corn.html">
+      Maeza Corn
+     </a>
+    </li>
+    <li>
+     <a href="Sap_Chip.html">
+      Sap Chip
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/maeza_corn (1).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/maeza_corn (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/maeza_corn (2).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/maeza_corn (2).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/maeza_corn (3).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/maeza_corn (3).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/maeza_corn (4).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/maeza_corn (4).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/sap_chip (1).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/sap_chip (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/sap_chip (2).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/sap_chip (2).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/sap_chip (3).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/sap_chip (3).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/sap_chip (4).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/sap_chip (4).jpg
+     </a>
+    </li>
    </ul>
   </div>
  </body>
