--- a/campaign/items/index.html
+++ b/campaign/items/index.html
@@ -79,6 +79,13 @@
      </a>
     </li>
     <li>
+     <a class="dir-index-link" href="other/index.html">
+      <i class="fas fa-folder">
+      </i>
+      other
+     </a>
+    </li>
+    <li>
      <a class="dir-index-link" href="quest/index.html">
       <i class="fas fa-folder">
       </i>
