--- a/campaign/items/weapons/index.html
+++ b/campaign/items/weapons/index.html
@@ -50,6 +50,54 @@
   </h1>
   <div class="indexLinks">
    <ul>
+    <li>
+     <a href="Fang_Of_Azshira.html">
+      Fang Of Azshira
+     </a>
+    </li>
+    <li>
+     <a href="Fang_Of_Elaine.html">
+      Fang Of Elaine
+     </a>
+    </li>
+    <li>
+     <a href="Fang_Of_Essieldore.html">
+      Fang Of Essieldore
+     </a>
+    </li>
+    <li>
+     <a href="Fang_Of_Pellinore.html">
+      Fang Of Pellinore
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/Fang_Of_Azshira.jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/Fang_Of_Azshira.jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/Fang_Of_Elaine.jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/Fang_Of_Elaine.jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/Fang_Of_Essieldore.jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/Fang_Of_Essieldore.jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/Fang_Of_Pellinore.jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/Fang_Of_Pellinore.jpg
+     </a>
+    </li>
    </ul>
   </div>
  </body>
