--- a/campaign/locations/cities/index.html
+++ b/campaign/locations/cities/index.html
@@ -50,6 +50,18 @@
   </h1>
   <div class="indexLinks">
    <ul>
+    <li>
+     <a href="Tol'Kahtan.html">
+      Tol'Kahtan
+     </a>
+    </li>
+    <li>
+     <a class="dir-index-link" href="Vifavea/index.html">
+      <i class="fas fa-folder">
+      </i>
+      Vifavea
+     </a>
+    </li>
    </ul>
   </div>
  </body>
