--- a/campaign/locations/regions/Matella/Eldara/index.html
+++ b/campaign/locations/regions/Matella/Eldara/index.html
@@ -68,6 +68,13 @@
      </a>
     </li>
     <li>
+     <a class="image-index-link" href="img/Mozedd_Peninsula.jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/Mozedd_Peninsula.jpg
+     </a>
+    </li>
+    <li>
      <a class="image-index-link" href="img/Sifariato_Mountains.jpg">
       <i class="fas fa-camera">
       </i>
