--- a/campaign/locations/regions/Matella/The_Ashenlands/The_Ashenlands.html
+++ b/campaign/locations/regions/Matella/The_Ashenlands/The_Ashenlands.html
@@ -436,7 +436,9 @@
    <p>
     <ul>
      <li>
-      Dessaquest
+      <a href="../../../towns/Dessaquest/Dessaquest.html">
+       Dessaquest
+      </a>
      </li>
      <li>
       YellowSeed
@@ -494,7 +496,9 @@
       Palda River
      </li>
      <li>
-      Quey River
+      <a href="../../../rivers/Quey_River/Quey_River.html">
+       Quey River
+      </a>
      </li>
      <li>
       Lowine River
