--- a/campaign/locations/towns/index.html
+++ b/campaign/locations/towns/index.html
@@ -50,6 +50,13 @@
   </h1>
   <div class="indexLinks">
    <ul>
+    <li>
+     <a class="dir-index-link" href="Dessaquest/index.html">
+      <i class="fas fa-folder">
+      </i>
+      Dessaquest
+     </a>
+    </li>
    </ul>
   </div>
  </body>
