--- a/campaign/quests/manastorm_legal_advisors/index.html
+++ b/campaign/quests/manastorm_legal_advisors/index.html
@@ -66,6 +66,11 @@
      </a>
     </li>
     <li>
+     <a href="note.jpg">
+      note.jpg
+     </a>
+    </li>
+    <li>
      <a href="parchment.jpg">
       parchment.jpg
      </a>
