--- a/campaign/items/consumables/food/img/index.html
+++ b/campaign/items/consumables/food/img/index.html
@@ -4,7 +4,7 @@
   <title>
    index
   </title>
-  <link href="../../../../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <link href="../../../../../css/mmorpdnd.css" rel="stylesheet"/>
   <!-- JavaScript to handle navigation buttons -->
   <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
   </script>
@@ -46,23 +46,48 @@
    </a>
   </div>
   <h1>
-   Index of /home/awtorode/git/DnD/campaign/locations/regions/Matella/Eldara/img
+   Index of /home/awtorode/git/DnD/campaign/items/consumables/food/img
   </h1>
   <div class="indexLinks">
    <ul>
     <li>
-     <a href="Eldara.jpg">
-      Eldara.jpg
+     <a href="maeza_corn (1).jpg">
+      maeza corn (1).jpg
      </a>
     </li>
     <li>
-     <a href="Mozedd_Peninsula.jpg">
-      Mozedd Peninsula.jpg
+     <a href="maeza_corn (2).jpg">
+      maeza corn (2).jpg
      </a>
     </li>
     <li>
-     <a href="Sifariato_Mountains.jpg">
-      Sifariato Mountains.jpg
+     <a href="maeza_corn (3).jpg">
+      maeza corn (3).jpg
+     </a>
+    </li>
+    <li>
+     <a href="maeza_corn (4).jpg">
+      maeza corn (4).jpg
+     </a>
+    </li>
+    <li>
+     <a href="sap_chip (1).jpg">
+      sap chip (1).jpg
+     </a>
+    </li>
+    <li>
+     <a href="sap_chip (2).jpg">
+      sap chip (2).jpg
+     </a>
+    </li>
+    <li>
+     <a href="sap_chip (3).jpg">
+      sap chip (3).jpg
+     </a>
+    </li>
+    <li>
+     <a href="sap_chip (4).jpg">
+      sap chip (4).jpg
      </a>
     </li>
    </ul>
