--- a/campaign/items/weapons/img/index.html
+++ b/campaign/items/weapons/img/index.html
@@ -4,7 +4,7 @@
   <title>
    index
   </title>
-  <link href="../../../../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <link href="../../../../css/mmorpdnd.css" rel="stylesheet"/>
   <!-- JavaScript to handle navigation buttons -->
   <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
   </script>
@@ -46,23 +46,28 @@
    </a>
   </div>
   <h1>
-   Index of /home/awtorode/git/DnD/campaign/locations/regions/Matella/Eldara/img
+   Index of /home/awtorode/git/DnD/campaign/items/weapons/img
   </h1>
   <div class="indexLinks">
    <ul>
     <li>
-     <a href="Eldara.jpg">
-      Eldara.jpg
+     <a href="Fang_Of_Azshira.jpg">
+      Fang Of Azshira.jpg
      </a>
     </li>
     <li>
-     <a href="Mozedd_Peninsula.jpg">
-      Mozedd Peninsula.jpg
+     <a href="Fang_Of_Elaine.jpg">
+      Fang Of Elaine.jpg
      </a>
     </li>
     <li>
-     <a href="Sifariato_Mountains.jpg">
-      Sifariato Mountains.jpg
+     <a href="Fang_Of_Essieldore.jpg">
+      Fang Of Essieldore.jpg
+     </a>
+    </li>
+    <li>
+     <a href="Fang_Of_Pellinore.jpg">
+      Fang Of Pellinore.jpg
      </a>
     </li>
    </ul>
