--- a/campaign/locations/cities/Vifavea/index.html
+++ b/campaign/locations/cities/Vifavea/index.html
@@ -4,7 +4,7 @@
   <title>
    index
   </title>
-  <link href="../../../../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <link href="../../../../css/mmorpdnd.css" rel="stylesheet"/>
   <!-- JavaScript to handle navigation buttons -->
   <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
   </script>
@@ -46,23 +46,22 @@
    </a>
   </div>
   <h1>
-   Index of /home/awtorode/git/DnD/campaign/locations/regions/Matella/Eldara/img
+   Index of /home/awtorode/git/DnD/campaign/locations/cities/Vifavea
   </h1>
   <div class="indexLinks">
    <ul>
     <li>
-     <a href="Eldara.jpg">
-      Eldara.jpg
+     <a class="image-index-link" href="img/Vifavea (1).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/Vifavea (1).jpg
      </a>
     </li>
     <li>
-     <a href="Mozedd_Peninsula.jpg">
-      Mozedd Peninsula.jpg
-     </a>
-    </li>
-    <li>
-     <a href="Sifariato_Mountains.jpg">
-      Sifariato Mountains.jpg
+     <a class="image-index-link" href="img/Vifavea (2).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/Vifavea (2).jpg
      </a>
     </li>
    </ul>
