--- a/campaign/locations/index.html
+++ b/campaign/locations/index.html
@@ -100,6 +100,13 @@
      </a>
     </li>
     <li>
+     <a class="dir-index-link" href="rivers/index.html">
+      <i class="fas fa-folder">
+      </i>
+      rivers
+     </a>
+    </li>
+    <li>
      <a class="dir-index-link" href="towns/index.html">
       <i class="fas fa-folder">
       </i>
