--- a/campaign/locations/rivers/Quey_River/img/index.html
+++ b/campaign/locations/rivers/Quey_River/img/index.html
@@ -4,7 +4,7 @@
   <title>
    index
   </title>
-  <link href="../../../../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <link href="../../../../../css/mmorpdnd.css" rel="stylesheet"/>
   <!-- JavaScript to handle navigation buttons -->
   <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
   </script>
@@ -46,23 +46,23 @@
    </a>
   </div>
   <h1>
-   Index of /home/awtorode/git/DnD/campaign/locations/regions/Matella/Eldara/img
+   Index of /home/awtorode/git/DnD/campaign/locations/rivers/Quey_River/img
   </h1>
   <div class="indexLinks">
    <ul>
     <li>
-     <a href="Eldara.jpg">
-      Eldara.jpg
+     <a href="Fang_Wall_Compartment.jpg">
+      Fang Wall Compartment.jpg
      </a>
     </li>
     <li>
-     <a href="Mozedd_Peninsula.jpg">
-      Mozedd Peninsula.jpg
+     <a href="Quey_River.jpg">
+      Quey River.jpg
      </a>
     </li>
     <li>
-     <a href="Sifariato_Mountains.jpg">
-      Sifariato Mountains.jpg
+     <a href="kenneth_Zud_Tablet_For_Egg.jpg">
+      kenneth Zud Tablet For Egg.jpg
      </a>
     </li>
    </ul>
