--- a/campaign/locations/rivers/Quey_River/index.html
+++ b/campaign/locations/rivers/Quey_River/index.html
@@ -4,7 +4,7 @@
   <title>
    index
   </title>
-  <link href="../../../../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <link href="../../../../css/mmorpdnd.css" rel="stylesheet"/>
   <!-- JavaScript to handle navigation buttons -->
   <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
   </script>
@@ -46,23 +46,34 @@
    </a>
   </div>
   <h1>
-   Index of /home/awtorode/git/DnD/campaign/locations/regions/Matella/Eldara/img
+   Index of /home/awtorode/git/DnD/campaign/locations/rivers/Quey_River
   </h1>
   <div class="indexLinks">
    <ul>
     <li>
-     <a href="Eldara.jpg">
-      Eldara.jpg
+     <a href="Quey_River.html">
+      Quey River
      </a>
     </li>
     <li>
-     <a href="Mozedd_Peninsula.jpg">
-      Mozedd Peninsula.jpg
+     <a class="image-index-link" href="img/Fang_Wall_Compartment.jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/Fang_Wall_Compartment.jpg
      </a>
     </li>
     <li>
-     <a href="Sifariato_Mountains.jpg">
-      Sifariato Mountains.jpg
+     <a class="image-index-link" href="img/Quey_River.jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/Quey_River.jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/kenneth_Zud_Tablet_For_Egg.jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/kenneth_Zud_Tablet_For_Egg.jpg
      </a>
     </li>
    </ul>
