--- a/campaign/notes/index.html
+++ b/campaign/notes/index.html
@@ -50,6 +50,11 @@
   </h1>
   <div class="indexLinks">
    <ul>
+    <li>
+     <a href="Genji_Tinks_Inventions.html">
+      Genji Tinks Inventions
+     </a>
+    </li>
    </ul>
   </div>
  </body>
