--- a/campaign/quests/manastorm_legal_advisors/Manastorm_Legal_Advisors.html
+++ b/campaign/quests/manastorm_legal_advisors/Manastorm_Legal_Advisors.html
@@ -70,7 +70,7 @@
      Bakaria</a>, nestled in the far northwest.
    </p>
    <p>
-    Fate, however, had other plans in store. A grave turn of events endangered the ambassador's life, forcing Milton to swiftly devise a daring plan. With a moment's ingenuity, he utilized his magical prowess to transform the ambassador into a diminutive chicken, rendering them small enough to fit into the confines of the extraordinary
+    Fate, however, had other plans in store. A grave turn of events endangered the ambassador's life, forcing Milton to swiftly devise a daring plan. With a moment's ingenuity, he utilized his magical prowess to transform the ambassador into a diminutive creature (chicken), rendering them small enough to fit into the confines of the extraordinary
     <a href="../../items/devices/ChronoLink_Nexus_Ethereal_Pocket_Portal.html">
      ChronoLink Nexus Ethereal Pocket Portal
     </a>
@@ -197,6 +197,31 @@
      silas shadowvale
     </a>
     . This Wanderer can offer the players much more information about the situation and contract in exchange for a price. His price is all the knowledge they gain related to and while on the legal adventures of this quest. Otherwise, he will only direct them to where they need to proceed to.
+   </p>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    The Chicken's Secret: A Tale of Time Travel, Deception, and Clucks
+   </h3>
+   <p class="first-paragraph">
+    The ambassador, entrusted with the crucial mission of delivering the ancient relic to the wizard in
+    <a href="../../locations/regions/Matella/Bakaria/Bakaria.html">
+     Bakaria</a>, had fallen under the influence of a fanatical cult. Recognizing the significance of the mission, the ambassador devised a plan to ensure the artifact fell into the cult's hands. Manipulating the situation, the ambassador convinced Davis Octavia Maximus, an esteemed commander of the revered 4th Legion Battalion, to take on the role of the ambassador, disguising himself as a decoy.
+   </p>
+   <p>
+    Reluctantly, Davis agreed to assume the ambassador's identity and join Milton Manastorm's group as they embarked on the perilous journey. However, unbeknownst to Davis, the ambassador had orchestrated an ambush along the way. The ensuing chaos resulted in Davis being transformed into a chicken and inadvertently sent back in time, while Milton was wrongfully apprehended and imprisoned.
+   </p>
+   <p>
+    As the displaced chicken, Davis found himself two years in the past, stranded in the desert near the city he had embarked from. Having retained his memories, Davis traveled to the city where he sought refuge and recognition from
+    <a href="../../characters/non-player/marla_hindesah.html">
+     marla hindesah</a>, the tavern keeper who had shown exceptional care for a local chicken in their original timeline. Approaching Marla, he hoped to win her favor and receive the same treatment. To Davis's surprise, Marla did not have a chicken when he arrived, as he would become the chicken she had cared for in the present timeline. From his travels to the city from deep within the desert, Davis was in bad shape and close to death. Marla first found him this way, and in an act of concern, nurtured Davis back to health.
+   </p>
+   <p>
+    In an extraordinary twist of fate, one day, Davis found himself face to face with his past self - before being transformed into a chicken. Astonished by this unexpected encounter, he made every effort to capture his own attention. The vivid recollection of a similar interaction involving the tavern's resident chicken from his own past suddenly struck him. It dawned upon Davis that he must have been thrust back in time, trapped in his avian form until at least the present caught up with him, leaving no hope of reversing the transformation until that pivotal moment was reached. Capitalizing on this fortunate turn of events, Davis used his knowledge of future interactions and behaviors to gain Marla's trust and affection. Impressed by the chicken's apparent intelligence and unusual awareness, Marla welcomed Davis into her care, completely unaware of his true identity.
+   </p>
+   <p>
+    Over the course of two years, Davis, now known as the local resident chicken, became an integral part of the town's community. He interacted with the players, leaving subtle clues and hints related to the mission, all while maintaining the guise of an ordinary chicken. The players may gradually piece together the significance of the chicken's presence and uncover the truth behind Davis's transformation, leading them closer to unraveling the larger mystery surrounding the cult's machinations and the stolen artifact.
    </p>
   </div>
   <hr/>
