Added some links and moved some files

--- a/campaign/characters/non-player/adrian_hearthwood.html
+++ b/campaign/characters/non-player/adrian_hearthwood.html
@@ -540,7 +540,11 @@
     Background Information
    </h3>
    <p class="first-paragraph">
-    Adrian Hearthwood, the proud owner of the Palmhaven Inn in Vifavea and a seasoned fighter, ensures the success and safety of the establishment. With his strong presence and sharp strategic mind, Adrian expertly manages the inn's operations and ensures the comfort of its guests. His proficiency in combat and extensive knowledge of tactics make him a reliable protector, while his warm demeanor and genuine care for others create a welcoming atmosphere within the inn. Whether engaging in friendly conversations or overseeing the daily affairs, Adrian's leadership and dedication make Palmhaven Inn a cherished home away from home for travelers.
+    Adrian Hearthwood, the proud owner of the Palmhaven Inn in
+    <a href="../../locations/cities/Vifavea/Vifavea.html">
+     Vifavea
+    </a>
+    and a seasoned fighter, ensures the success and safety of the establishment. With his strong presence and sharp strategic mind, Adrian expertly manages the inn's operations and ensures the comfort of its guests. His proficiency in combat and extensive knowledge of tactics make him a reliable protector, while his warm demeanor and genuine care for others create a welcoming atmosphere within the inn. Whether engaging in friendly conversations or overseeing the daily affairs, Adrian's leadership and dedication make Palmhaven Inn a cherished home away from home for travelers.
    </p>
   </div>
   <hr/>
