--- a/campaign/characters/non-player/aerineth_sunleaf.html
+++ b/campaign/characters/non-player/aerineth_sunleaf.html
@@ -577,7 +577,11 @@
     <a href="../../lore/guilds/Gardener's_Guild.html">
      Gardener's Guild
     </a>
-    and an integral part of the care of Tranquil Blooms in Vifavea. With ethereal beauty and radiant presence, Aerineth tends to the flora with reverence, using his druidic powers to nurture and protect the garden's enchanting beauty. As an Eladrin, he embodies the essence of the Feywild, harnessing its magic to bring forth mesmerizing blooms and create secret paths that intertwine with the realm of dreams.
+    and an integral part of the care of Tranquil Blooms in
+    <a href="../../locations/cities/Vifavea/Vifavea.html">
+     Vifavea
+    </a>
+    . With ethereal beauty and radiant presence, Aerineth tends to the flora with reverence, using his druidic powers to nurture and protect the garden's enchanting beauty. As an Eladrin, he embodies the essence of the Feywild, harnessing its magic to bring forth mesmerizing blooms and create secret paths that intertwine with the realm of dreams.
    </p>
   </div>
   <hr/>
