--- a/campaign/characters/non-player/aurelia_windweaver.html
+++ b/campaign/characters/non-player/aurelia_windweaver.html
@@ -498,7 +498,11 @@
     Background Information
    </h3>
    <p class="first-paragraph">
-    Aurelia Windweaver, a skilled half-elf rogue, is the proud owner of Sailmaker's Haven in Vifavea. With her keen eye for detail and nimble fingers, Aurelia meticulously crafts sails, ropes, and fabrics that withstand the harshest sea conditions. Her passion for sailing and her knowledge of nautical textiles make her the go-to person for sailors in need of high-quality materials. Aurelia's warm and friendly demeanor, coupled with her expertise, has earned her a trusted reputation among seafarers, who appreciate her dedication to their craft and the enhancement she brings to their sailing experiences.
+    Aurelia Windweaver, a skilled half-elf rogue, is the proud owner of Sailmaker's Haven in
+    <a href="../../locations/cities/Vifavea/Vifavea.html">
+     Vifavea
+    </a>
+    . With her keen eye for detail and nimble fingers, Aurelia meticulously crafts sails, ropes, and fabrics that withstand the harshest sea conditions. Her passion for sailing and her knowledge of nautical textiles make her the go-to person for sailors in need of high-quality materials. Aurelia's warm and friendly demeanor, coupled with her expertise, has earned her a trusted reputation among seafarers, who appreciate her dedication to their craft and the enhancement she brings to their sailing experiences.
    </p>
   </div>
   <hr/>
