--- a/campaign/characters/non-player/celestia_starweave.html
+++ b/campaign/characters/non-player/celestia_starweave.html
@@ -499,7 +499,9 @@
     Background Information
    </h3>
    <p class="first-paragraph">
-    Celestia Starweave is the enchanting owner of The Astral Attire in Vifavea, a celestial fashion boutique that captures the essence of cosmic elegance. With her innate sorcerous abilities and a keen eye for celestial fashion, Celestia curates a collection of enchanting garments infused with celestial magic. Her boutique is a sanctuary for those seeking to embrace their inner radiance and shine like stars.
+    Celestia Starweave is the enchanting owner of The Astral Attire in
+    <a href="../../locations/cities/Vifavea/Vifavea.html">
+     Vifavea</a>, a celestial fashion boutique that captures the essence of cosmic elegance. With her innate sorcerous abilities and a keen eye for celestial fashion, Celestia curates a collection of enchanting garments infused with celestial magic. Her boutique is a sanctuary for those seeking to embrace their inner radiance and shine like stars.
    </p>
   </div>
   <hr/>
