--- a/campaign/characters/non-player/damali_bekk.html
+++ b/campaign/characters/non-player/damali_bekk.html
@@ -501,7 +501,11 @@
     Background Information
    </h3>
    <p class="first-paragraph">
-    Damali Bekk, a talented male tiefling bard, is the captivating owner of The Songbird's Melody in Vifavea. With his melodious voice and masterful skill in playing musical instruments, Damali curates a captivating collection of instruments, sheet music, and enchanting melodies. His music shop is a haven for music lovers, offering a harmonious escape where customers can explore the transformative power of music and find their own unique melody.
+    Damali Bekk, a talented male tiefling bard, is the captivating owner of The Songbird's Melody in
+    <a href="../../locations/cities/Vifavea/Vifavea.html">
+     Vifavea
+    </a>
+    . With his melodious voice and masterful skill in playing musical instruments, Damali curates a captivating collection of instruments, sheet music, and enchanting melodies. His music shop is a haven for music lovers, offering a harmonious escape where customers can explore the transformative power of music and find their own unique melody.
    </p>
   </div>
   <hr/>
