--- a/campaign/characters/non-player/faerwen_grenleaf.html
+++ b/campaign/characters/non-player/faerwen_grenleaf.html
@@ -541,7 +541,9 @@
     Background Information
    </h3>
    <p class="first-paragraph">
-    Faerwen Grenleaf, the esteemed owner of the Palmhaven Apothecary in Vifavea, is a seasoned healer and devoted servant of the divine. With his profound wisdom and mastery of herbal remedies, Faerwen has become a beacon of hope in the community. As a cleric of the Life domain, he channels the power of his deity to mend wounds, cure ailments, and provide spiritual guidance. His unwavering commitment to the well-being of others has earned him the respect and gratitude of all who seek solace and healing within the walls of the Palmhaven Apothecary.
+    Faerwen Grenleaf, the esteemed owner of the Palmhaven Apothecary in
+    <a href="../../locations/cities/Vifavea/Vifavea.html">
+     Vifavea</a>, is a seasoned healer and devoted servant of the divine. With his profound wisdom and mastery of herbal remedies, Faerwen has become a beacon of hope in the community. As a cleric of the Life domain, he channels the power of his deity to mend wounds, cure ailments, and provide spiritual guidance. His unwavering commitment to the well-being of others has earned him the respect and gratitude of all who seek solace and healing within the walls of the Palmhaven Apothecary.
    </p>
   </div>
   <hr/>
