--- a/campaign/characters/non-player/isabella_evergreen.html
+++ b/campaign/characters/non-player/isabella_evergreen.html
@@ -516,7 +516,13 @@
     Background Information
    </h3>
    <p class="first-paragraph">
-    Isabella Evergreen, the passionate owner of the Palmhaven Art Gallery in Vifavea, is an elf with an eye for artistic brilliance. With her refined taste and deep appreciation for the arts, Isabella curates a stunning collection of paintings, sculptures, and crafts that capture the essence of Vifavea's cultural heritage. As a bard of the College of Lore, Isabella's enchanting melodies fill the gallery, elevating the ambiance and creating an immersive experience for art enthusiasts.
+    Isabella Evergreen, the passionate owner of the Palmhaven Art Gallery in
+    <a href="../../locations/cities/Vifavea/Vifavea.html">
+     Vifavea</a>, is an elf with an eye for artistic brilliance. With her refined taste and deep appreciation for the arts, Isabella curates a stunning collection of paintings, sculptures, and crafts that capture the essence of
+    <a href="../../locations/cities/Vifavea/Vifavea.html">
+     Vifavea
+    </a>
+    's cultural heritage. As a bard of the College of Lore, Isabella's enchanting melodies fill the gallery, elevating the ambiance and creating an immersive experience for art enthusiasts.
    </p>
   </div>
   <hr/>
