--- a/campaign/characters/non-player/kellan_stormtide.html
+++ b/campaign/characters/non-player/kellan_stormtide.html
@@ -497,7 +497,11 @@
     Background Information
    </h3>
    <p class="first-paragraph">
-    Kellan Stormtide, a skilled water genasi artificer, leads Neptune's Workshop in Vifavea with his expertise in boat crafting and fish supply. His affinity for water and his deep knowledge of maritime engineering make him the perfect owner for the bustling hub. Kellan's meticulous craftsmanship and innovative ideas ensure that every boat built at Neptune's Workshop is seaworthy and efficient, while his dedication to providing top-notch fishing equipment helps local fishermen thrive. With his calm demeanor and passion for the sea, Kellan Stormtide is a trusted figure in the Sea Breeze District, always ready to assist fellow seafarers and adventurers in their aquatic endeavors.
+    Kellan Stormtide, a skilled water genasi artificer, leads Neptune's Workshop in
+    <a href="../../locations/cities/Vifavea/Vifavea.html">
+     Vifavea
+    </a>
+    with his expertise in boat crafting and fish supply. His affinity for water and his deep knowledge of maritime engineering make him the perfect owner for the bustling hub. Kellan's meticulous craftsmanship and innovative ideas ensure that every boat built at Neptune's Workshop is seaworthy and efficient, while his dedication to providing top-notch fishing equipment helps local fishermen thrive. With his calm demeanor and passion for the sea, Kellan Stormtide is a trusted figure in the Sea Breeze District, always ready to assist fellow seafarers and adventurers in their aquatic endeavors.
    </p>
   </div>
   <hr/>
