--- a/campaign/characters/non-player/merrick_gearlock.html
+++ b/campaign/characters/non-player/merrick_gearlock.html
@@ -522,7 +522,9 @@
     Background Information
    </h3>
    <p class="first-paragraph">
-    Merrick Gearlock, a brilliant and inventive gnome, captains The Clockwork Corner in Vifavea, a remarkable ship where gears, cogs, and ticking wonders reign supreme. As a master clockmaker and skilled Artificer of the Archivist subclass, Merrick showcases a profound understanding of mechanical intricacies and clockwork technology. The ship itself is a marvel of engineering, adorned with enchanting timepieces and intricate automaton companions that captivate all who visit. Merrick's nimble hands and sharp intellect allow him to craft and repair these intricate mechanisms with precision and finesse. Visitors to The Clockwork Corner can marvel at the wondrous creations on display or even commission their own personalized timepiece. With Merrick at the helm, The Clockwork Corner sails through time and space, offering a unique and captivating experience to all who step aboard.
+    Merrick Gearlock, a brilliant and inventive gnome, captains The Clockwork Corner in
+    <a href="../../locations/cities/Vifavea/Vifavea.html">
+     Vifavea</a>, a remarkable ship where gears, cogs, and ticking wonders reign supreme. As a master clockmaker and skilled Artificer of the Archivist subclass, Merrick showcases a profound understanding of mechanical intricacies and clockwork technology. The ship itself is a marvel of engineering, adorned with enchanting timepieces and intricate automaton companions that captivate all who visit. Merrick's nimble hands and sharp intellect allow him to craft and repair these intricate mechanisms with precision and finesse. Visitors to The Clockwork Corner can marvel at the wondrous creations on display or even commission their own personalized timepiece. With Merrick at the helm, The Clockwork Corner sails through time and space, offering a unique and captivating experience to all who step aboard.
    </p>
   </div>
   <hr/>
