--- a/campaign/characters/non-player/nenyala_rindew.html
+++ b/campaign/characters/non-player/nenyala_rindew.html
@@ -563,7 +563,9 @@
    <p class="first-paragraph">
     Nenyala Rindew, a seasoned member of the esteemed
     <a href="../../lore/guilds/Gardener's_Guild.html">
-     Gardener's Guild</a>, possesses an innate connection with nature that guides her every action. With a serene demeanor and emerald eyes that mirror the tranquility of the Tranquil Blooms garden in Vifavea, Nenyala tends to the flora with expert care, coaxing forth vibrant blooms and maintaining the delicate balance of the natural world. Her extensive druidic powers allow her to channel the primal forces of nature, summoning storms, healing wounds, and commanding the very elements themselves in defense of the garden she cherishes.
+     Gardener's Guild</a>, possesses an innate connection with nature that guides her every action. With a serene demeanor and emerald eyes that mirror the tranquility of the Tranquil Blooms garden in
+    <a href="../../locations/cities/Vifavea/Vifavea.html">
+     Vifavea</a>, Nenyala tends to the flora with expert care, coaxing forth vibrant blooms and maintaining the delicate balance of the natural world. Her extensive druidic powers allow her to channel the primal forces of nature, summoning storms, healing wounds, and commanding the very elements themselves in defense of the garden she cherishes.
    </p>
   </div>
   <hr/>
