--- a/campaign/characters/non-player/percival_gearlock.html
+++ b/campaign/characters/non-player/percival_gearlock.html
@@ -517,7 +517,9 @@
    <p class="first-paragraph">
     Percival Gearlock, the talented brother of
     <a href="merrick_gearlock.html">
-     merrick gearlock</a>, shares his sibling's passion for clockwork and mechanical wonders. As an Artificer of the Battle Smith subclass, Percival infuses his tinkering expertise with combat prowess. While Merrick sails The Clockwork Corner in Vifavea, Percival focuses on honing his skills as a clockmaker and weapon designer. With his trusty steel defender by his side, Percival defends the family's workshop and ensures the safety of their creations. His intricate clockwork weapons and ingenious gadgets have gained him a reputation as a skilled artisan and resourceful inventor. While the brothers pursue different paths within the realm of clockwork mastery, their bond remains unbreakable, their shared passion for craftsmanship and invention forging a deep connection that transcends mere blood ties.
+     merrick gearlock</a>, shares his sibling's passion for clockwork and mechanical wonders. As an Artificer of the Battle Smith subclass, Percival infuses his tinkering expertise with combat prowess. While Merrick sails The Clockwork Corner in
+    <a href="../../locations/cities/Vifavea/Vifavea.html">
+     Vifavea</a>, Percival focuses on honing his skills as a clockmaker and weapon designer. With his trusty steel defender by his side, Percival defends the family's workshop and ensures the safety of their creations. His intricate clockwork weapons and ingenious gadgets have gained him a reputation as a skilled artisan and resourceful inventor. While the brothers pursue different paths within the realm of clockwork mastery, their bond remains unbreakable, their shared passion for craftsmanship and invention forging a deep connection that transcends mere blood ties.
    </p>
   </div>
   <hr/>
