--- a/campaign/characters/non-player/quintus_salwaither.html
+++ b/campaign/characters/non-player/quintus_salwaither.html
@@ -498,7 +498,9 @@
     Background Information
    </h3>
    <p class="first-paragraph">
-    Quintus Salwaither is the passionate owner of Tidal Delights in Vifavea, a seafood haven that showcases the finest catches from the ocean. His deep connection with the sea and his musical talents create an enchanting atmosphere, where patrons can enjoy both delectable seafood and soul-stirring melodies. With his vibrant personality and knack for storytelling, Quintus ensures that every visit to Tidal Delights is a memorable experience, leaving a lasting impression like the gentle touch of the ocean waves.
+    Quintus Salwaither is the passionate owner of Tidal Delights in
+    <a href="../../locations/cities/Vifavea/Vifavea.html">
+     Vifavea</a>, a seafood haven that showcases the finest catches from the ocean. His deep connection with the sea and his musical talents create an enchanting atmosphere, where patrons can enjoy both delectable seafood and soul-stirring melodies. With his vibrant personality and knack for storytelling, Quintus ensures that every visit to Tidal Delights is a memorable experience, leaving a lasting impression like the gentle touch of the ocean waves.
    </p>
   </div>
   <hr/>
