--- a/campaign/characters/non-player/rosalind_scribeheart.html
+++ b/campaign/characters/non-player/rosalind_scribeheart.html
@@ -528,7 +528,9 @@
     Background Information
    </h3>
    <p class="first-paragraph">
-    Rosalind Scribeheart, the proud owner of The Inkwell in Vifavea, is a talented bard and dedicated scribe. With her charismatic personality and passion for the written word, Rosalind has created a haven for writers and scribes alike. The Inkwell boasts an impressive collection of quills, inks, and parchments, offering a vast array of options for those seeking to capture their thoughts on paper. Rosalind's expertise in calligraphy allows her to provide valuable guidance to customers, helping them select the perfect tools for their creative endeavors. As a bard of the Lore subclass, Rosalind's melodic performances inspire and enchant all who visit The Inkwell, creating an atmosphere of creativity and inspiration. Whether you're an aspiring writer or a seasoned scribe, Rosalind Scribeheart welcomes you to The Inkwell, where the beauty of words and the art of penmanship intertwine.
+    Rosalind Scribeheart, the proud owner of The Inkwell in
+    <a href="../../locations/cities/Vifavea/Vifavea.html">
+     Vifavea</a>, is a talented bard and dedicated scribe. With her charismatic personality and passion for the written word, Rosalind has created a haven for writers and scribes alike. The Inkwell boasts an impressive collection of quills, inks, and parchments, offering a vast array of options for those seeking to capture their thoughts on paper. Rosalind's expertise in calligraphy allows her to provide valuable guidance to customers, helping them select the perfect tools for their creative endeavors. As a bard of the Lore subclass, Rosalind's melodic performances inspire and enchant all who visit The Inkwell, creating an atmosphere of creativity and inspiration. Whether you're an aspiring writer or a seasoned scribe, Rosalind Scribeheart welcomes you to The Inkwell, where the beauty of words and the art of penmanship intertwine.
    </p>
   </div>
   <hr/>
