--- a/campaign/locations/cities/Vifavea/index.html
+++ b/campaign/locations/cities/Vifavea/index.html
@@ -51,6 +51,11 @@
   <div class="indexLinks">
    <ul>
     <li>
+     <a href="Vifavea.html">
+      Vifavea
+     </a>
+    </li>
+    <li>
      <a class="image-index-link" href="img/Vifavea (1).jpg">
       <i class="fas fa-camera">
       </i>
