--- a/campaign/locations/regions/Matella/Eldara/Eldara.html
+++ b/campaign/locations/regions/Matella/Eldara/Eldara.html
@@ -298,7 +298,9 @@
       Renhak
      </li>
      <li>
-      Vifavea
+      <a href="../../../cities/Vifavea/Vifavea.html">
+       Vifavea
+      </a>
      </li>
      <li>
       Pentara
