--- a/campaign/characters/non-player/ariadne_witwood.html
+++ b/campaign/characters/non-player/ariadne_witwood.html
@@ -529,7 +529,9 @@
     Background Information
    </h3>
    <p class="first-paragraph">
-    Ariadne Witwood, the knowledgeable and dedicated owner of the Palmside Library in Vifavea, immerses visitors in the enchanting world of literature and wisdom. With her elven grace and profound understanding of arcane arts, Evelyn curates an extensive collection of books, manuscripts, and scrolls, catering to the thirst for knowledge of all who enter. Her passion for learning and meticulous attention to detail ensure that the library remains a tranquil sanctuary where scholars and seekers of knowledge can explore the vast realms of literature and expand their intellectual horizons.
+    Ariadne Witwood, the knowledgeable and dedicated owner of the Palmside Library in
+    <a href="../../locations/cities/Vifavea/Vifavea.html">
+     Vifavea</a>, immerses visitors in the enchanting world of literature and wisdom. With her elven grace and profound understanding of arcane arts, Evelyn curates an extensive collection of books, manuscripts, and scrolls, catering to the thirst for knowledge of all who enter. Her passion for learning and meticulous attention to detail ensure that the library remains a tranquil sanctuary where scholars and seekers of knowledge can explore the vast realms of literature and expand their intellectual horizons.
    </p>
   </div>
   <hr/>
