--- a/campaign/characters/non-player/daenara_fhindre.html
+++ b/campaign/characters/non-player/daenara_fhindre.html
@@ -522,7 +522,9 @@
     Background Information
    </h3>
    <p class="first-paragraph">
-    Daenara Fhindre is the proud owner of The Silverleaf Apothecary in Vifavea, a renowned establishment that specializes in herbal remedies, potions, and tinctures. As a skilled herbalist and experienced Druid of the Circle of the Land, Daenara possesses a deep connection with nature and a profound understanding of its healing properties. The shelves of her shop are lined with jars of carefully curated herbs and alchemical concoctions, each designed to address specific ailments and promote well-being. Daenara's gentle demeanor and extensive knowledge make her a trusted advisor, as she assists customers in finding the perfect remedy for their needs. Beyond her role as a shop owner, Daenara Fhindre's nurturing love extends to her esteemed daughter,
+    Daenara Fhindre is the proud owner of The Silverleaf Apothecary in
+    <a href="../../locations/cities/Vifavea/Vifavea.html">
+     Vifavea</a>, a renowned establishment that specializes in herbal remedies, potions, and tinctures. As a skilled herbalist and experienced Druid of the Circle of the Land, Daenara possesses a deep connection with nature and a profound understanding of its healing properties. The shelves of her shop are lined with jars of carefully curated herbs and alchemical concoctions, each designed to address specific ailments and promote well-being. Daenara's gentle demeanor and extensive knowledge make her a trusted advisor, as she assists customers in finding the perfect remedy for their needs. Beyond her role as a shop owner, Daenara Fhindre's nurturing love extends to her esteemed daughter,
     <a href="telma_fhindre.html">
      telma fhindre</a>, fostering within her a shared ardor for herbalism and natural healing as she pursues her esteemed path as a judge.
    </p>
