--- a/campaign/characters/non-player/dariana_spellweaver.html
+++ b/campaign/characters/non-player/dariana_spellweaver.html
@@ -571,7 +571,11 @@
     Background Information
    </h3>
    <p class="first-paragraph">
-    Dariana Spellweaver, a knowledgeable half-elf wizard, is the proud owner of The Enchanted Emporium in Vifavea. With a deep understanding of enchantment magic, Dariana carefully curates a collection of mystical artifacts and magical curiosities that leave visitors spellbound. Her expertise in the art of enchantment allows her to infuse her shop with a whimsical aura, creating an enchanting atmosphere that draws in customers from far and wide.
+    Dariana Spellweaver, a knowledgeable half-elf wizard, is the proud owner of The Enchanted Emporium in
+    <a href="../../locations/cities/Vifavea/Vifavea.html">
+     Vifavea
+    </a>
+    . With a deep understanding of enchantment magic, Dariana carefully curates a collection of mystical artifacts and magical curiosities that leave visitors spellbound. Her expertise in the art of enchantment allows her to infuse her shop with a whimsical aura, creating an enchanting atmosphere that draws in customers from far and wide.
    </p>
   </div>
   <hr/>
