--- a/campaign/characters/non-player/lilyana_hearthwood.html
+++ b/campaign/characters/non-player/lilyana_hearthwood.html
@@ -515,7 +515,11 @@
     Background Information
    </h3>
    <p class="first-paragraph">
-    Lilyana Hearthwood, a skilled rogue and brewer, is the cheerful barkeep at the Palmhaven Inn in Vifavea. With her warm smile and nimble hands, Lilyana ensures that every guest is treated to delicious libations and friendly service. Her expertise in brewing adds a touch of creativity to the inn's drink selection, enticing travelers to savor unique and delightful flavors during their stay. Whether sharing stories by the hearth or tending to the bustling bar, Lilyana's presence brings joy and a sense of camaraderie to Palmhaven Inn's tranquil courtyard.
+    Lilyana Hearthwood, a skilled rogue and brewer, is the cheerful barkeep at the Palmhaven Inn in
+    <a href="../../locations/cities/Vifavea/Vifavea.html">
+     Vifavea
+    </a>
+    . With her warm smile and nimble hands, Lilyana ensures that every guest is treated to delicious libations and friendly service. Her expertise in brewing adds a touch of creativity to the inn's drink selection, enticing travelers to savor unique and delightful flavors during their stay. Whether sharing stories by the hearth or tending to the bustling bar, Lilyana's presence brings joy and a sense of camaraderie to Palmhaven Inn's tranquil courtyard.
    </p>
   </div>
   <hr/>
