--- a/campaign/characters/non-player/marius_stormrider.html
+++ b/campaign/characters/non-player/marius_stormrider.html
@@ -498,7 +498,9 @@
     Background Information
    </h3>
    <p class="first-paragraph">
-    Marius Stormrider, a seasoned warrior and the owner of The Salty Seahorse Inn in Vifavea, welcomes guests with a stoic yet hospitable demeanor. His strong presence and dedication to providing a comfortable stay ensure that visitors enjoy a memorable experience by the seaside. With his battle-hardened skills and keen eye for detail, Marius maintains a well-run establishment that caters to the needs of weary adventurers and locals alike, leaving them with tales of both comfort and valor.
+    Marius Stormrider, a seasoned warrior and the owner of The Salty Seahorse Inn in
+    <a href="../../locations/cities/Vifavea/Vifavea.html">
+     Vifavea</a>, welcomes guests with a stoic yet hospitable demeanor. His strong presence and dedication to providing a comfortable stay ensure that visitors enjoy a memorable experience by the seaside. With his battle-hardened skills and keen eye for detail, Marius maintains a well-run establishment that caters to the needs of weary adventurers and locals alike, leaving them with tales of both comfort and valor.
    </p>
   </div>
   <hr/>
