--- a/campaign/characters/non-player/mortimer_blackthorn.html
+++ b/campaign/characters/non-player/mortimer_blackthorn.html
@@ -499,7 +499,11 @@
     Background Information
    </h3>
    <p class="first-paragraph">
-    Mortimer Blackthorn, a tiefling with a thirst for knowledge and a penchant for the strange and unusual, is the eccentric owner of The Curious Cabinet in Vifavea. His extensive travels and deep connections in the archaeological community have allowed him to acquire a vast assortment of enigmatic artifacts and peculiar curiosities, each with a mysterious story waiting to be unraveled. With his dark charisma and insatiable curiosity, Mortimer delights in sharing tales of the supernatural and the arcane with visitors, inviting them to step into a world of wonders beyond their wildest imaginations.
+    Mortimer Blackthorn, a tiefling with a thirst for knowledge and a penchant for the strange and unusual, is the eccentric owner of The Curious Cabinet in
+    <a href="../../locations/cities/Vifavea/Vifavea.html">
+     Vifavea
+    </a>
+    . His extensive travels and deep connections in the archaeological community have allowed him to acquire a vast assortment of enigmatic artifacts and peculiar curiosities, each with a mysterious story waiting to be unraveled. With his dark charisma and insatiable curiosity, Mortimer delights in sharing tales of the supernatural and the arcane with visitors, inviting them to step into a world of wonders beyond their wildest imaginations.
    </p>
   </div>
   <hr/>
